--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -1,37 +1,113 @@
 {
+    "homeHeader": {
+        "home": "TRANG CHỦ",
+        "buyTicket": "MUA VÉ",
+        "movie": "PHIM",
+        "news": "TIN TỨC",
+        "support": "HỖ TRỢ",
+        "login": "Đăng nhập",
+        "register": "Đăng ký",
+        "search": "Nhập nội dung bạn cần tìm..."
+    },
+    "banner": {
+        "title1": "NỀN TẢNG Y TẾ",
+        "title2": "CHĂM SÓC SỨC KHỎE TOÀN DIỆN",
+        "child1": "Khám chuyên khoa",
+        "child2": "Khám từ xa",
+        "child3": "Khám tổng quát",
+        "child4": "Xét nghiệm y học",
+        "child5": "Sức khỏe tin thần",
+        "child6": "Khám nha khoa"
+    },
     "menu": {
         "admin": {
-            "header": "Hệ thống",
-            "user-management": "Quản lý người dùng",
-            "genres-management": "Thể loại",
-            "artists-management": "Nghệ sĩ",
-            "songs-management": "Bài Hát",
-            "albums-management": "Albums",
-            "playlist-management": "Playlist"
+            "manage-user": "Người dùng",
+            "manage-doctor": "Quản lý bác sĩ",
+            "manage-admin": "Quản lý admin",
+            "crud": "CRUD user",
+            "crud-redux": "CRUD Redux",
+            "clinic": "Phòng khám",
+            "manage-clinic": "Quản lý phòng khám",
+            "specialty": "Chuyên khoa",
+            "manage-specialty": "Quản lý chuyên khoa",
+            "handbook": "Cẩm nang",
+            "manage-handbook": "Quản lý cẩm nang"
         },
-        "user-management": {
-            "add": "Thêm mới người dùng",
-            "list-users": "Liệt kê người dùng"
+        "doctor": {
+            "manage-schedule": "Quản lý kế hoạch khám bệnh",
+            "manage-patient": "Quản lý bệnh nhân khám bệnh"
+        }
+    },
+    "manage-user": {
+        "add": "Thêm mới người dùng",
+        "email": "Email",
+        "password": "Mật khẩu",
+        "first-name": "Tên",
+        "last-name": "Họ",
+        "phone-number": "Số điện thoại",
+        "address": "Địa chỉ",
+        "gender": "Giới tính",
+        "position": "Chức danh",
+        "role": "Vai trò",
+        "save": "Lưu",
+        "edit": "Cập nhật",
+        "image": "Ảnh đại diện"
+    },
+    "homepage": {
+        "out-standing-doctor": "Bác sĩ nổi bật tuần qua",
+        "moreInfo": "Xem thêm",
+        "specialty-popular": "Chuyên khoa phổ biến"
+    },
+    "manage-schedule": {
+        "title": "Quản lý kế hoạch khám bệnh của bác sĩ",
+        "choose-doctor": "Chọn bác sĩ",
+        "choose-date": "Chọn ngày",
+        "save": "Lưu"
+    },
+    "patient": {
+        "detail-doctor": {
+            "schedule": "Lịch khám",
+            "no-schedule": "Bác sĩ không có lịch khám",
+            "choose": "Chọn ",
+            "Book-free": " và đặt (miễn phí)"
         },
-        "genres-management": {
-            "add": "Thêm thể loại",
-            "list-genres": "Danh sách thể loại"
+        "extra-infor-doctor": {
+            "text-address": "Địa chỉ khám",
+            "price": "Giá khám: ",
+            "detail": "Xem chi tiết",
+            "payment": "Người bệnh có thể thanh toán chi phí bằng hình thức:",
+            "hide-price": "Ẩn bảng giá"
         },
-        "artists-management": {
-            "add": "Thêm nghệ sĩ",
-            "list-artists": "Danh sách nghệ sĩ"
-        },
-        "songs-management": {
-            "add": " Thêm bài hát",
-            "list-songs": "Danh sách bài hát"
-        },
-        "albums-management": {
-            "add": "Thêm Albums",
-            "list-albums": "Danh sách Albums"
-        },
-        "playlist-management": {
-            "add": "Thêm Playlist",
-            "list-playlist": "Danh sách Playlist"
+        "booking-modal": {
+            "title": "Thông tin đặt lịch khám bệnh",
+            "fullName": "Họ và tên",
+            "phoneNumber": "Số điện thoại",
+            "email": "Địa chỉ email",
+            "address": "Địa chỉ liên lạc",
+            "reason": "Lý do khám",
+            "birthday": "Ngày sinh",
+            "gender": "Giới tính",
+            "btnConfirm": "Xác nhận",
+            "btnCancel": "Hủy",
+            "priceBooking": "Miễn phí đặt lịch",
+            "price": "Giá khám: "
+        }
+    },
+    "admin": {
+        "manage-doctor": {
+            "title": "Tạo thêm thông tin doctor",
+            "select-doctor": "Chọn bác sĩ",
+            "intro": "Thông tin giới thiệu",
+            "add": "Tạo thông tin",
+            "save": "Lưu thông tin",
+            "price": "Giá khám bệnh",
+            "payment": "Phương thức thanh toán",
+            "province": "Tỉnh thành",
+            "nameClinic": "Tên phòng khám",
+            "addressClinic": "Địa chỉ phòng phám",
+            "note": "Ghi chú",
+            "specialty": "Chọn chuyên khoa",
+            "select-clinic": "Chọn phòng khám"
         }
     }
 }
