--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -9,7 +9,8 @@
         "register": "Đăng ký",
         "search": "Nhập nội dung bạn cần tìm...",
         "reviewFilm": "ĐÁNH GIÁ PHIM",
-        "introFilm": "GIỚI THIỆU PHIM"
+        "introFilm": "GIỚI THIỆU PHIM",
+        "discount": "KHUYẾN MÃI"
     },
     "banner": {
         "title1": "NỀN TẢNG Y TẾ",
