giao dien rap - chua co map

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -10,7 +10,8 @@
         "search": "Type what you are looking for...",
         "reviewFilm": "REVIEW FILM",
         "introFilm": "INTRODUCE FILM",
-        "discount": "DISCOUNT"
+        "discount": "DISCOUNT",
+        "theater": "THEATER"
     },
     "banner": {
         "title1": "NỀN TẢNG Y TẾ",
