--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -10,7 +10,8 @@
         "search": "Nhập nội dung bạn cần tìm...",
         "reviewFilm": "ĐÁNH GIÁ PHIM",
         "introFilm": "GIỚI THIỆU PHIM",
-        "discount": "KHUYẾN MÃI"
+        "discount": "KHUYẾN MÃI",
+        "theater": "RẠP"
     },
     "banner": {
         "title1": "NỀN TẢNG Y TẾ",
