--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -9,7 +9,7 @@
         "register": "Đăng ký",
         "search": "Nhập nội dung bạn cần tìm...",
         "reviewFilm": "ĐÁNH GIÁ PHIM",
-        "introFilm": "GIỚI THIỆU PHIM",
+        "introFilm": "BLOG ĐIỆN ẢNH",
         "discount": "KHUYẾN MÃI",
         "theater": "RẠP"
     },
